--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
-    pull_request:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 env:
   RUSTFLAGS: -Dwarnings
