--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,23 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sentry_protos = "0.1.33"
+sentry_protos = "0.1.34"
+prost = "0.13"
+prost-types = "0.13.3"
 anyhow = "1.0.92"
 chrono = { version = "0.4.26" }
-sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"] }
-prost = "0.13"
 tokio = { version = "1.41.0", features = ["full"] }
-prost-types = "0.13.3"
+tokio-util = "0.7.12"
+tokio-stream = { version = "0.1.16", features = ["full"] }
+async-stream = "0.3.5"
+futures = "0.3.31"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 rdkafka = { version = "0.36.2", features = ["cmake-build"] }
 serde = "1.0.214"
 serde_yaml = "0.9.34"
 figment = { version = "0.10.19", features = ["env", "yaml", "test"] }
+sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"] }
 
 [dev-dependencies]
 rand = "0.8.5"
