--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ figment = { version = "0.10.19", features = ["env", "yaml", "test"] }
 clap = { version = "4.5.20", features = ["derive"] }
 sentry = { version = "0.34.0", features = ["tracing"] }
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
+tracing = "0.1.40"
 
 [dev-dependencies]
 rand = "0.8.5"
