--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sentry_protos = "0.1.33"
+sentry_protos = "0.1.34"
 anyhow = "1.0.92"
 chrono = { version = "0.4.26" }
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"] }
+tonic = "0.12"
 prost = "0.13"
 tokio = { version = "1.41.0", features = ["full"] }
 prost-types = "0.13.3"
@@ -20,3 +21,7 @@ figment = { version = "0.10.19", features = ["env", "yaml", "test"] }
 
 [dev-dependencies]
 rand = "0.8.5"
+
+# This shouldn't be needed, since the sentry-protos repo should generate this
+[build-dependencies]
+tonic-build = "0.12"
