--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ rdkafka = { version = "0.36.2", features = ["cmake-build"] }
 serde = "1.0.214"
 serde_yaml = "0.9.34"
 figment = { version = "0.10.19", features = ["env", "yaml", "test"] }
+clap = { version = "4.5.20", features = ["derive"] }
+sentry = { version = "0.34.0", features = ["tracing"] }
+tracing-subscriber = { version = "0.3.18", features = ["json"] }
+tracing = "0.1.40"
 
 [dev-dependencies]
 rand = "0.8.5"
