--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ clap = { version = "4.5.20", features = ["derive"] }
 sentry = { version = "0.34.0", features = ["tracing"] }
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
 tracing = "0.1.40"
+metrics-exporter-statsd = "0.9.0"
+metrics = "0.24.0"
 
 [dev-dependencies]
 rand = "0.8.5"
