--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 [dependencies]
 sentry_protos = "0.1.34"
-prost = "0.13"
-prost-types = "0.13.3"
 anyhow = "1.0.92"
 chrono = { version = "0.4.26" }
+sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"] }
+tonic = "0.12"
+prost = "0.13"
+prost-types = "0.13.3"
 tokio = { version = "1.41.0", features = ["full"] }
 tokio-util = "0.7.12"
 tokio-stream = { version = "0.1.16", features = ["full"] }
@@ -20,7 +22,6 @@ rdkafka = { version = "0.36.2", features = ["cmake-build"] }
 serde = "1.0.214"
 serde_yaml = "0.9.34"
 figment = { version = "0.10.19", features = ["env", "yaml", "test"] }
-sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"] }
 clap = { version = "4.5.20", features = ["derive"] }
 sentry = { version = "0.34.0", features = ["tracing"] }
 tracing = "0.1.40"
