ref(main): Use elegant_departure to cleanly shutdown
The taskbroker has two shutdown cases currently:
1. A signal is received of some kind (SIGINT etc.)
2. One of the components panics/shuts down

In the first case, shut down the guard that all the components are awaiting,
which will cause them to execute.

In the second case, when the tokio task finishes, the guard being dropped
will trigger a shutdown on the other guards. Log the error/completion of
the original component and then wait for all the other components to shut down.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,6 @@ prost-types = "0.13.3"
 tokio = { version = "1.41.0", features = ["full"] }
 tokio-util = "0.7.12"
 tokio-stream = { version = "0.1.16", features = ["full"] }
-async-stream = "0.3.5"
 futures = "0.3.31"
 rdkafka = { version = "0.36.2", features = ["cmake-build"] }
 serde = "1.0.214"
@@ -29,6 +28,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
 metrics-exporter-statsd = "0.9.0"
 metrics = "0.24.0"
+elegant-departure = "0.3.1"
 
 [dev-dependencies]
 rand = "0.8.5"
