--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
 metrics-exporter-statsd = "0.9.0"
 metrics = "0.24.0"
-elegant-departure = "0.3.1"
+elegant-departure = { version = "0.3.1", features = ["tokio"] }
 
 [dev-dependencies]
 rand = "0.8.5"
