--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sentry_protos = "0.1.34"
+sentry_protos = "0.1.36"
 anyhow = "1.0.92"
 chrono = { version = "0.4.26" }
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "chrono"] }
@@ -28,7 +28,7 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["json"] }
 metrics-exporter-statsd = "0.9.0"
 metrics = "0.24.0"
-elegant-departure = "0.3.1"
+elegant-departure = { version = "0.3.1", features = ["tokio"] }
 
 [dev-dependencies]
 rand = "0.8.5"
