--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tracing-subscriber = { version = "0.3.18", features = ["json"] }
 metrics-exporter-statsd = "0.9.0"
 metrics = "0.24.0"
 elegant-departure = { version = "0.3.1", features = ["tokio"] }
+uuid = { version = "1.11.0", features = ["v4"] }
 
 [dev-dependencies]
 rand = "0.8.5"
