--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ tonic = "0.12"
 tonic-health = "0.12.3"
 prost = "0.13"
 prost-types = "0.13.3"
-tokio = { version = "1.41.0", features = ["full"] }
+tokio = { version = "1.41.0", features = ["full", "tracing"] }
 tokio-util = "0.7.12"
 tokio-stream = { version = "0.1.16", features = ["full"] }
 futures = "0.3.31"
@@ -29,6 +29,7 @@ tracing-subscriber = { version = "0.3.18", features = ["json"] }
 metrics-exporter-statsd = "0.9.0"
 metrics = "0.24.0"
 elegant-departure = { version = "0.3.1", features = ["tokio"] }
+console-subscriber = "0.4.1"
 
 [dev-dependencies]
 rand = "0.8.5"
