Clone sentry too

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install protoc
-        uses: arduino/setup-protoc@v3
+      - name: Checkout sentry
+        uses: actions/checkout@v4
+        with:
+          repository: getsentry/sentry
+          path: sentry
 
       - name: Setup steps
         id: setup
@@ -56,6 +59,9 @@ jobs:
           snuba: false
           kafka: true
           clickhouse: false
+
+      - name: Install protoc
+        uses: arduino/setup-protoc@v3
 
       - uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af # pin@v1
         with:
