--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,3 +78,9 @@ jobs:
         with:
           command: test
           args: --all
+
+      - name: Run Integration Tests
+        env:
+          SENTRY_PATH: ${{ github.workspace }}/sentry
+        run: |
+          python -m pytest tests/integration
