--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,6 @@ jobs:
 
       - name: Run Integration Tests
         env:
-          SENTRY_PATH: ${{ github.workspace }}/sentry
+          SENTRY_PATH: sentry/
         run: |
-          python -m pytest tests/integration
+          python -m pytest python/integration_tests
