--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,8 +81,10 @@ jobs:
 
       - name: Install Python Dependencies
         run: |
-          make install-py-dev
+          python -m venv python/.venv
+          . python/.venv/bin/activate
+          pip install -r python/requirements-dev.txt
 
       - name: Run Python Integration Tests
         run: |
-          make integration-test
+          python -m pytest python/integration_tests
