--- a/python/requirements-dev.txt
+++ b/python/requirements-dev.txt
@@ -1,6 +1,6 @@
-kafka-python>=2.0.2
-orjson>=3.10.12
-protobuf>=5.29.0
+confluent_kafka>=2.3.0
+orjson>=3.10.10
+protobuf>=5.28.3
 pytest>=8.3.3
 pyyaml>=6.0.2
 sentry-protos>=0.1.37
