--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,4 +87,5 @@ jobs:
 
       - name: Run Python Integration Tests
         run: |
+          export PYTEST_ADDOPTS=""
           python -m pytest python/integration_tests
