--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,4 +88,4 @@ jobs:
       - name: Run Python Integration Tests
         run: |
           export PYTEST_ADDOPTS=""
-          python -m pytest python/integration_tests
+          python -m pytest python/integration_tests -s -vv
