--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,10 @@
 *.sqlite-shm
 *.sqlite-wal
 
+# Python
+**/__pycache__/
+**/.pytest_cache/
+**/integration_tests/.tests_output/
+**/.venv
+
 .VERSION
