--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: cargo clippy --workspace --all-features --tests -- -D clippy::all
 
   test:
-    name: Tests (ubuntu)
+    name: Test (ubuntu)
     runs-on: ubuntu-latest
 
     steps:
