temporarily push on all

--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -26,7 +26,9 @@ jobs:
             --push
           )
         else
-          args=()
+          args=(
+            --push
+          )
         fi
 
         docker buildx build \
