--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -11,7 +11,7 @@ jobs:
     - run: docker login --username '${{ github.actor }}' --password-stdin ghcr.io <<< "$GHCR_TOKEN"
       env:
         GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      if: github.event_name != 'pull_request'
+      # if: github.event_name != 'pull_request'
 
     - run: docker buildx create --driver docker-container --use
 
