--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -11,7 +11,7 @@ jobs:
     - run: docker login --username '${{ github.actor }}' --password-stdin ghcr.io <<< "$GHCR_TOKEN"
       env:
         GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # if: github.event_name != 'pull_request'
+      if: github.event_name != 'pull_request'
 
     - run: docker buildx create --driver docker-container --use
 
@@ -26,9 +26,7 @@ jobs:
             --push
           )
         else
-          args=(
-            --push
-          )
+          args=()
         fi
 
         docker buildx build \
@@ -39,48 +37,3 @@ jobs:
           --tag ghcr.io/getsentry/taskbroker:${{ github.sha }} \
           "${args[@]}" \
           .
-
-  publish-to-dockerhub:
-    name: Publish Taskbroker to DockerHub
-    runs-on: ubuntu-20.04
-    # if: ${{ (github.ref_name == 'master') }} # Commented out just for testing
-    steps:
-      - uses: actions/checkout@v3 # v3.1.0
-      - name: Pull the GCB image
-        id: image_pull
-        env:
-          IMAGE_URL: us-central1-docker.pkg.dev/sentryio/taskbroker/image:${{ github.sha }}
-        shell: bash
-        run: |
-          echo "We poll for the Docker image that the GCB/GHA build produces until it succeeds or this job times out."
-          echo "Polling for $IMAGE_URL"
-          timeout 20m bash -c 'until docker pull "$IMAGE_URL" 2>/dev/null; do sleep 10; done'
-      - name: Get short SHA for docker tag
-        id: short_sha
-        shell: bash
-        run: |
-          SHORT_SHA=$(git rev-parse --short "$GITHUB_SHA")
-          if [[ -z "$SHORT_SHA" ]]; then
-            echo "Short SHA empty? Re-running rev-parse."
-            git rev-parse --short "$GITHUB_SHA"
-          else
-            echo "sha=$SHORT_SHA" >> $GITHUB_OUTPUT
-          fi
-      - name: Push built docker image
-        shell: bash
-        env:
-          SHORT_SHA: ${{ steps.short_sha.outputs.sha }}
-          IMAGE_URL: us-central1-docker.pkg.dev/sentryio/taskbroker/image:${{ github.sha }}
-        run: |
-          # only login if the password is set
-          if [[ "${{ secrets.DOCKER_HUB_RW_TOKEN }}" ]]; then echo "${{ secrets.DOCKER_HUB_RW_TOKEN }}" | docker login --username=sentrybuilder --password-stdin; fi
-          # We push 3 tags to Dockerhub:
-          # first, the full sha of the commit
-          docker tag ${IMAGE_URL} getsentry/taskbroker:${GITHUB_SHA}
-          docker push getsentry/taskbroker:${GITHUB_SHA}
-          # second, the short sha of the commit
-          docker tag ${IMAGE_URL} getsentry/taskbroker:${SHORT_SHA}
-          docker push getsentry/taskbroker:${SHORT_SHA}
-          # finally, nightly
-          docker tag ${IMAGE_URL} getsentry/taskbroker:nightly
-          docker push getsentry/taskbroker:nightly
