--- a/.envrc
+++ b/.envrc
@@ -4,7 +4,7 @@ if [[ -f .env ]]; then
     dotenv .env
 fi
 
-if [ ! -d .venv ]; then
+if [ ! -d python/.venv ]; then
     echo "warning: creating virtualenv for the first time"
     make setup
     source python/.venv/bin/activate
