--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,30 @@ jobs:
         with:
           key: ${{ github.job }}
 
-      - name: Run Rebalance Integration Test
+      - name: Run rebalance integration test
         run: |
           make test-rebalance
+
+  worker-processing-integration-test:
+    name: Worker processing integration test
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install protoc
+        uses: arduino/setup-protoc@v3
+
+      - uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af # pin@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          override: true
+
+      - uses: swatinem/rust-cache@81d053bdb0871dcd3f10763c8cc60d0adc41762b # pin@v1
+        with:
+          key: ${{ github.job }}
+
+      - name: Run worker processing integration test
+        run: |
+          make test-worker-processing
