feat: Add a Docker container for taskworkers
When testing in sandboxes, it's helpful to have a worker image that can be scaled up and down
easily, and that can be configured with different failure modes. Add a new docker image for a simple
worker that can be set to fail randomly a certain percentage of times.

The failure can be an actual task failure, or simply never returning a status for a task, causing it
to "timeout".

--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -37,3 +37,38 @@ jobs:
           --tag ghcr.io/getsentry/taskbroker:${{ github.sha }} \
           "${args[@]}" \
           .
+
+  build-runner:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - run: docker login --username '${{ github.actor }}' --password-stdin ghcr.io <<< "$GHCR_TOKEN"
+      env:
+        GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: github.event_name != 'pull_request'
+
+    - run: docker buildx create --driver docker-container --use
+
+    - name: build
+      run: |
+        set -euxo pipefail
+
+        if [ ${{ github.event_name }} = 'push' ]; then
+          args=(
+            --tag ghcr.io/getsentry/taskbroker-runner:latest
+            --tag ghcr.io/getsentry/taskbroker-runner:amd64-latest
+            --push
+          )
+        else
+          args=()
+        fi
+
+        docker buildx build \
+          --pull \
+          --platform linux/amd64 \
+          --cache-from ghcr.io/getsentry/taskbroker-runner:latest \
+          --cache-to type=inline \
+          --tag ghcr.io/getsentry/taskbroker-runner:${{ github.sha }} \
+          "${args[@]}" \
+          ./python
