--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,3 +13,16 @@ steps:
         "./Dockerfile",
       ]
     timeout: 1200s
+
+  - name: "gcr.io/kaniko-project/executor:v1.16.0"
+    id: runtime-image
+    waitFor: ["-"]
+    args:
+      [
+        "--cache=true",
+        "--use-new-run",
+        "--destination=us-central1-docker.pkg.dev/$PROJECT_ID/taskbroker-runner/image:$COMMIT_SHA",
+        "-f",
+        "./python/Dockerfile",
+      ]
+    timeout: 1200s
