--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -38,7 +38,7 @@ jobs:
           "${args[@]}" \
           .
 
-  build-runner:
+  build-taskworker:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
