--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -5,8 +5,7 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY . /app
-COPY requirements-dev.txt /app/requirements-dev.txt
+COPY ./python /app
 
 # Install any needed dependencies specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements-dev.txt
