--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -5,7 +5,8 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY ./python /app
+COPY . /app
+COPY requirements-dev.txt /app/requirements-dev.txt
 
 # Install any needed dependencies specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements-dev.txt
