--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,6 @@ steps:
         "--cache=true",
         "--use-new-run",
         "--destination=us-central1-docker.pkg.dev/$PROJECT_ID/taskworker/image:$COMMIT_SHA",
-        "-f",
-        "./python/Dockerfile",
+        "./python",
       ]
     timeout: 1200s
