--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,6 +22,8 @@ steps:
         "--cache=true",
         "--use-new-run",
         "--destination=us-central1-docker.pkg.dev/$PROJECT_ID/taskworker/image:$COMMIT_SHA",
-        "./python",
+        "--context=dir:///python",
+        "-f",
+        "./Dockerfile",
       ]
     timeout: 1200s
