--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,8 +22,7 @@ steps:
         "--cache=true",
         "--use-new-run",
         "--destination=us-central1-docker.pkg.dev/$PROJECT_ID/taskworker/image:$COMMIT_SHA",
-        "--context=dir:///python",
-        "-f",
-        "./python/Dockerfile",
+        "--context=dir://./python",
+        "--dockerfile=Dockerfile",
       ]
     timeout: 1200s
