--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -37,3 +37,38 @@ jobs:
           --tag ghcr.io/getsentry/taskbroker:${{ github.sha }} \
           "${args[@]}" \
           .
+
+  build-taskworker:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - run: docker login --username '${{ github.actor }}' --password-stdin ghcr.io <<< "$GHCR_TOKEN"
+      env:
+        GHCR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: github.event_name != 'pull_request'
+
+    - run: docker buildx create --driver docker-container --use
+
+    - name: build
+      run: |
+        set -euxo pipefail
+
+        if [ ${{ github.event_name }} = 'push' ]; then
+          args=(
+            --tag ghcr.io/getsentry/taskworker:latest
+            --tag ghcr.io/getsentry/taskworker:amd64-latest
+            --push
+          )
+        else
+          args=()
+        fi
+
+        docker buildx build \
+          --pull \
+          --platform linux/amd64 \
+          --cache-from ghcr.io/getsentry/taskworker:latest \
+          --cache-to type=inline \
+          --tag ghcr.io/getsentry/taskworker:${{ github.sha }} \
+          "${args[@]}" \
+          ./python
