--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ tower = "0.5.1"
 http = "1.1.0"
 hmac = "0.12.1"
 sha2 = "0.10.8"
+pin-project = "1.1.9"
+hex = "0.4.3"
 
 [dev-dependencies]
 rand = "0.8.5"
