--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,10 @@ hmac = "0.12.1"
 sha2 = "0.10.8"
 pin-project = "1.1.9"
 hex = "0.4.3"
+http-body-util = "0.1.2"
+bytes = "1.10.0"
+futures-util = "0.3.31"
+http-body = "1.0.1"
 
 [dev-dependencies]
 rand = "0.8.5"
