--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,12 @@ elegant-departure = { version = "0.3.1", features = ["tokio"] }
 uuid = { version = "1.11.0", features = ["v4"] }
 tower = "0.5.1"
 http = "1.1.0"
+hmac = "0.12.1"
+sha2 = "0.10.8"
+hex = "0.4.3"
+bytes = "1.10.0"
+futures-util = "0.3.31"
+http-body-util = "0.1.2"
 
 [dev-dependencies]
 rand = "0.8.5"
