--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           toolchain: stable
           profile: minimal
           override: true
-          components: clippy rustfmt
+          components: clippy, rustfmt
 
       - uses: swatinem/rust-cache@v2
 
@@ -98,6 +98,9 @@ jobs:
       - uses: swatinem/rust-cache@81d053bdb0871dcd3f10763c8cc60d0adc41762b # pin@v1
         with:
           key: ${{ github.job }}
+
+      - name: Install Python Dependencies
+        run: make install-py-dev
 
       - name: Start services
         run: devservices up
