--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,14 @@ hex = "0.4.3"
 bytes = "1.10.0"
 futures-util = "0.3.31"
 http-body-util = "0.1.2"
+rand = "0.8.5"
 
 [dev-dependencies]
-rand = "0.8.5"
+criterion = { version = "0.5.1", features = ["async_tokio"] }
+
+[[bench]]
+name = "store_bench"
+harness = false
+
+[features]
+bench-with-mnt-disk = []
