--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -32,6 +32,7 @@ jobs:
         docker buildx build \
           --pull \
           --platform linux/amd64 \
+          --build-arg "TASKBROKER_GIT_REVISION=${{ github.sha }}" \
           --cache-from ghcr.io/getsentry/taskbroker:latest \
           --cache-to type=inline \
           --tag ghcr.io/getsentry/taskbroker:${{ github.sha }} \
