feat: Add release workflow for creating dockerhub images
- Add release workflow based on how vroom does it.
- Update dockerfile to remove unused arg and set default for version

--- a/.craft.yaml
+++ b/.craft.yaml
@@ -6,7 +6,7 @@ statusProvider:
   name: github
   config:
     contexts:
-      - 'build-on-branch-push (sentryio)'
+      - 'build-on-taskbroker-branch-push (sentryio)'
 targets:
   - id: release
     name: docker
