--- a/.craft.yml
+++ b/.craft.yml
@@ -7,6 +7,7 @@ statusProvider:
   config:
     contexts:
       - 'build-on-taskbroker-branch-push (sentryio)'
+preReleaseCommand: ""
 targets:
   - id: release
     name: docker
