Submit password via stdin

--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -49,7 +49,7 @@ jobs:
       - shell: bash
         run: |
           IMAGE_URL="ghcr.io/getsentry/taskbroker:${{ github.sha }}"
-          docker login --username=sentrybuilder --password ${{ secrets.DOCKER_HUB_RW_TOKEN }}
+          echo "${{ secrets.DOCKER_HUB_RW_TOKEN }}" | docker login --username=sentrybuilder --password-stdin
           # We push 3 tags to Dockerhub:
           # first, the full sha of the commit
           docker tag "$IMAGE_URL" getsentry/taskbroker:${GITHUB_SHA}
