ci: correctly push multiplatform image to dockerhub
See https://github.com/getsentry/relay/blob/7f4b354ebb99286dd20ee34c1da4540f7e1135bd/.github/workflows/ci.yml#L579-L594

--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -113,15 +113,14 @@ jobs:
 
           # We push 3 tags to Dockerhub:
           # first, the full sha of the commit
-          docker tag "$IMAGE_URL" getsentry/taskbroker:${GITHUB_SHA}
-          docker push getsentry/taskbroker:${GITHUB_SHA}
+          docker buildx imagetools create --tag getsentry/taskbroker:${GITHUB_SHA} ghcr.io/getsentry/taskbroker:${{ github.sha }}
+
           # second, the short sha of the commit
           SHORT_SHA=$(git rev-parse --short "$GITHUB_SHA")
-          docker tag "$IMAGE_URL" getsentry/taskbroker:${SHORT_SHA}
-          docker push getsentry/taskbroker:${SHORT_SHA}
+          docker buildx imagetools create --tag getsentry/taskbroker:${SHORT_SHA} ghcr.io/getsentry/taskbroker:${{ github.sha }}
+
           # finally, nightly
-          docker tag "$IMAGE_URL" getsentry/taskbroker:nightly
-          docker push getsentry/taskbroker:nightly
+          docker buildx imagetools create --tag getsentry/taskbroker:nightly ghcr.io/getsentry/taskbroker:${{ github.sha }}
 
   build-taskworker:
     runs-on: ubuntu-latest
