--- a/.envrc
+++ b/.envrc
@@ -1,14 +1,19 @@
-#!/bin/bash
-# shellcheck disable=SC1091
-if [[ -f .env ]]; then
-    dotenv .env
+#!/not/executable/bash
+
+if [[ -f "${PWD}/.env" ]]; then
+    dotenv
 fi
 
-if [ ! -d python/.venv ]; then
-    echo "warning: creating virtualenv for the first time"
-    make setup
-    source python/.venv/bin/activate
-else
-    source python/.venv/bin/activate
-    unset PS1
+PATH_add "${HOME}/.local/share/sentry-devenv/bin"
+
+if ! command -v devenv >/dev/null; then
+    echo "install devenv: https://github.com/getsentry/devenv#install"
+    return 1
 fi
+
+PATH_add "${PWD}/.devenv/bin"
+
+export VIRTUAL_ENV="${PWD}/.venv"
+PATH_add "${PWD}/.venv/bin"
+
+PATH_add /opt/homebrew/opt/rustup/bin
