--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,36 @@ repos:
       # rustfmt can do it but doesn't read Cargo.toml.
       # https://github.com/rust-lang/rustfmt/issues/4485
       entry: rustfmt --edition=2024
+
+    # Configuration for black exists in pyproject.toml,
+    # but we let pre-commit take care of the file filtering.
+    - id: black
+      name: black
+      entry: .venv/bin/black
+      language: system
+      types_or: [python, pyi]
+      require_serial: true
+
+    # Configuration for isort exists in pyproject.toml,
+    # but we let pre-commit take care of the file filtering.
+    - id: isort
+      name: isort
+      entry: isort
+      language: system
+      types: [python]
+
+    # Configuration for flake8 exists in setup.cfg,
+    # but we let pre-commit take care of the file filtering.
+    - id: flake8
+      name: flake8
+      entry: flake8
+      language: system
+      types: [python]
+      require_serial: true
+
+    - id: mypy
+      name: mypy
+      entry: mypy
+      language: system
+      types: [python]
+      require_serial: true
